# strata

./: .gitignore  README.md  pyproject.toml  requirements.txt
strata-platform/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
strata-platform/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
strata-platform/frontend/app/: ContextPanel.tsx  globals.css  layout.tsx  page.tsx
strata-platform/frontend/app/hta/: page.tsx
strata-platform/frontend/app/landscape/: page.tsx
strata-platform/frontend/app/surveillance/: page.tsx
strata-platform/frontend/app/synthesis/: page.tsx
strata-platform/infra/: terraform.tfstate
strata-platform/infra/terraform/: auth.tf  frontend.tf  main.tf  outputs.tf  providers.tf  variables.tf
strata-platform/strata_platform/: config.py  manage.py
strata-platform/strata_platform/api/: auth.py  context.py  demo.py  main.py  observability.py  routes.py
strata-platform/strata_platform/capabilities/: base.py  endpoint_landscape.py  evidence_synthesis.py  hta_archaeology.py  registry.py  safety_surveillance.py
strata-platform/strata_platform/context/: __init__.py  connectors.py  faers.py  ingest.py
strata-platform/strata_platform/data/: __init__.py  human_gold.json
strata-platform/strata_platform/db/: gold.py  ledger.py  models.py  session.py
strata-platform/strata_platform/db/migrations/: env.py
strata-platform/strata_platform/db/migrations/versions/: 0001_baseline.py  0002_faers_signal.py
strata-platform/strata_platform/eval/: harness.py  hta_eval.py  rubric.py
strata-platform/strata_platform/ingest/: __init__.py  corpus.py  health.py  pgvector.py
strata-platform/strata_platform/jobs/: db_store.py  runner.py  worker.py
strata-platform/strata_platform/sources/: __init__.py  base.py  clinicaltrials.py  dates.py  drug_identity.py  endpoints.py  nice.py  nice_feasibility.py  nice_guidance.py  nice_index.py  openfda.py  pubmed.py
strata-platform/strata_platform/substrate/: boundary.py  chunking.py  contracts.py  embeddings.py  provenance.py  reasoner.py  sql_guard.py  store.py
strata-platform/tests/: conftest.py  test_chunking.py  test_db_jobs.py  test_drug_identity.py  test_embeddings.py  test_endpoint_landscape.py  test_evidence_synthesis.py  test_gold_loader.py  test_grounding_and_finding.py  test_ingest_corpus.py  test_ledger.py  test_nice_guidance.py  test_nice_index.py  test_pgvector_boundary.py  test_platform.py  test_realtime_context.py  test_roadmap_capabilities.py  test_safety_signal.py  test_source_clients.py  test_source_parsers_phase3.py  test_sources_nice.py  test_sources_parse.py
strata-platform/tests/fixtures/nice/: ta1000.html  ta1002.html  ta_withdrawn.html
strata-research/: feasibility_report.json  (+2 more)
(+68 files in other folders)
