[project]
name = "strata"
version = "0.1.0"
description = "Public-data agentic Integrated Evidence Generation (PoV)"
requires-python = ">=3.11"
dependencies = ["httpx", "pydantic>=2", "openpyxl", "curl_cffi", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Production retrieval backend; the pure core/PoV does not require it.
qdrant = ["qdrant-client"]

[tool.pytest.ini_options]
# Run from repo root; make the top-level packages importable without installation.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
target-version = "py311"
# The research packages (core/, sources/, index/, ...) live under strata-research/,
# not the repo root, so isort needs the extra source root to classify them first-party.
src = [".", "strata-research"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
