[project]
name = "strata-platform"
version = "0.1.0"
description = "Agentic Integrated Evidence Generation platform — trust substrate + capability agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "curl_cffi>=0.7",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17",
    "azure-storage-blob>=12.20",
    "azure-storage-queue>=12.10",
    "pyjwt[crypto]>=2.8",
]
otel = [
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27",
]
dev = ["pytest>=8", "ruff>=0.5", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["strata_platform*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
